completed home structure

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <nav>
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
+                <li><a href="#">História</a></li>
                 <li><a href="#">Detalhes</a></li>
             </ul>
         </nav>
@@ -40,13 +41,21 @@
 
         <section class="contents">
             <div>
-                <img class="title-valorant" src="/src/images/valorant-title.png" alt="Title Valorant"> 
+                <img class="title-valorant" src="/src/images/valorant-title-2.png" alt="Title Valorant"> 
                 
-                <p class="description">It all starts in 2039, in the relatively near future, when an event known as the First Light takes place. The phenomenon, which occurs in various places around the world, consists of the appearance of strange rings of light that bring a new element to planet Earth.</p>
+                <p class="description">Tudo começa em 2039, em um futuro relativamente próximo, quando ocorre um evento conhecido como Primeira Luz. O fenômeno, que ocorre em vários lugares do mundo, consiste no aparecimento de estranhos anéis de luz que trazem um novo elemento ao planeta Terra. A radianita, até então desconhecida, é extremamente poderosa e se torna importantíssima para toda a humanidade</p>
                 <button class="btn">veja o trailer</button>
             </div>
             
             <img class="avatar" src="/src/images/personagens.png" alt="Avatares de valorant">
+
+            <div class="modal">
+                <div class="contents-modal">
+                    <span class="close-modal">X</span>
+                    <iframe id="video" width="560" height="315" src="https://www.youtube.com/watch?v=JxyAt2d4W4Q" title="Trailer Oficial" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+
         </section>
 
     </main>
