completed mobile navigation bar

--- a/index.html
+++ b/index.html
@@ -31,10 +31,8 @@
         </a>
         
         <nav id="nav">
-            <button id="btn-mobile" class="mobile-menu">
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="line3"></div>
+            <button id="btn-mobile" class="mobile-menu" aria-controls="menu" aria-haspopup="true">
+                <span id="btn-mobile-lines"></span>
             </button>
 
             <ul class="menu">
