finalization of the project

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             <img class="avatar" src="/src/images/personagens.png" alt="Avatares de valorant">
 
             <div class="modal">
-                <div class="contents-modal">
+                <div id="contents-modal" class="contents-modal">
                     <span class="close-modal">X</span>
-                    <iframe id="video" width="560" height="315" src="https://www.youtube.com/watch?v=JxyAt2d4W4Q" title="Trailer Oficial" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe id="video" width="560" height="315" src="https://www.youtube.com/watch?v=b9hVuerqMVo" title="Trailer Oficial" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
 
