--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
     <script src="./src/js/index.js" defer></script>
 
-    <link rel="stylesheet" href="/src/css/reset.css">
-    <link rel="stylesheet" href="/src/css/style.css">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;500&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="src/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/src/css/reset.css">
+    <link rel="stylesheet" href="/src/css/style.css">
     
 
     <title>Valorant</title>
@@ -58,7 +58,9 @@
             <div class="modal">
                 <div id="contents-modal" class="contents-modal">
                     <span class="close-modal">X</span>
-                    <iframe id="video" width="560" height="315" src="https://www.youtube.com/watch?v=b9hVuerqMVo" title="Trailer Oficial" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                    <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/JxyAt2d4W4Q" title="Episódio 1: Ignição // Trailer de Mecânica de Jogo do Lançamento Oficial - VALORANT" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
                 </div>
             </div>
 
