--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 
         <section class="contents">
             <div class="mobile-contents">
-                <img class="title-valorant" src="/src/images/valorant-title-2.png" alt="Title Valorant"> 
+                <img class="title-valorant" src="./src/images/valorant-title-2.png" alt="Title Valorant"> 
                 
                 <p class="description">Tudo começa em 2039, em um futuro relativamente próximo, quando ocorre um evento conhecido como Primeira Luz. O fenômeno, que ocorre em vários lugares do mundo, consiste no aparecimento de estranhos anéis de luz que trazem um novo elemento ao planeta Terra. A radianita, até então desconhecida, é extremamente poderosa e se torna importantíssima para toda a humanidade</p>
                 <button class="btn">veja o trailer</button>
             </div>
             
-            <img class="avatar" src="/src/images/personagens.png" alt="Avatares de valorant">
+            <img class="avatar" src="./src/images/personagens.png" alt="Avatares de valorant">
 
             <div class="modal">
                 <div id="contents-modal" class="contents-modal">
